[workspace]

resolver = "2"

members = [
    # "examples/annotate_isotopic_patterns",
    "examples/high_baseline",
    "mzdeisotope",
    "mzdeisotope-map",
    "mzdeisotoper"
]

[workspace.package]
version = "0.2.6"

[workspace.dependencies]

mzdata = { version = ">=0.41.0", default-features = false, features = ["mzsignal", "nalgebra"] }
mzpeaks = { version = ">=1.0.1,<1.1.0" }
mzsignal = { version = ">= 1.0.3,<1.1.0", default-features = false, features = ["nalgebra", "avx"] }
chemical_elements = { version = "0.5.0", features = ['mzpeaks'] }

tracing = { version = "0.1.40" }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "chrono"]}
tracing-appender = "0.2.3"
thiserror = "2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[profile.release]
lto = true
codegen-units = 1
opt-level = 2
debug = true

[profile.release.package."mzsignal"]
opt-level = 3

[profile.release.package."chemical_elements"]
opt-level = 3

[profile.dev.package."mzsignal"]
opt-level = 3

[profile.dev.package."chemical_elements"]
opt-level = 3

[patch.crates-io]
# mzdata = { path = "../mzdata" }