[workspace]

resolver = "2"

members = [
    # "examples/annotate_isotopic_patterns",
    "examples/high_baseline",
    "examples/ims_map",
    "mzdeisotope",
    "mzdeisotope-map",
    "mzdeisotoper"
]

[workspace.package]
version = "0.3.3"

[workspace.dependencies]

mzdeisotope = { version = "0.3.3", path = "./mzdeisotope" }
mzdeisotope-map = { version = "0.3.3", path = "./mzdeisotope-map" }

mzdata = { version = ">=0.53.0", default-features = false, features = ["mzsignal", "nalgebra", "mzml", "mgf"] }
mzpeaks = { version = ">=1.0.8,<1.1.0" }
mzsignal = { version = ">= 1.1.4,<1.2.0", default-features = false, features = ["nalgebra", "avx"] }
chemical_elements = { version = "0.7.0", features = ['mzpeaks'] }

tracing = { version = "0.1.40" }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "chrono"]}
tracing-appender = "0.2.3"
thiserror = "2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

clap = { version = "4.5.9", features = ["derive"] }
crossbeam-channel = { version = "0.5.13" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 2
debug = true

[profile.release.package."mzsignal"]
opt-level = 3

[profile.release.package."chemical_elements"]
opt-level = 3

[profile.dev.package."mzsignal"]
opt-level = 3

[profile.dev.package."chemical_elements"]
opt-level = 3

[patch.crates-io]
# mzdata = { path = "../mzdata" }
# mzsignal = { path = "../mzsignal" }
# mzpeaks = { path = "../mzpeaks" }
# chemical_elements = { path = "../chemical-elements" }