[package]
name = "mzdeisotope-map"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "A library to deisotope and charge state deconvolve mass spectra"
license = "Apache-2.0"
repository = "https://github.com/mobiusklein/mzdeisotope"
documentation = "https://docs.rs/mzdeisotope-map"
readme = "../README.md"
exclude = ["tests/"]

keywords = ['mass-spectrometry', 'deisotoping', 'charge-deconvolution']

categories = ["science", "science::bioinformatics::proteomics"]

[features]
default = ["serde"]

serde = ["dep:serde", "dep:serde_json", "mzpeaks/serde"]

[dependencies]

num-traits = "0.2"

mzdata = { workspace = true }
mzpeaks = { workspace = true }
mzsignal = { workspace = true }
chemical_elements = { workspace = true }
mzdeisotope = { path = "../mzdeisotope", version = "0.2.3" }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

tracing.workspace = true
thiserror.workspace = true

itertools = "0.12.0"

identity-hash = "0.1.0"

[dev-dependencies]
flate2 = "1.0.28"
test-log = { version = "0.2.16", features = ["trace", "unstable"] }
rayon = "1.7.0"