[package]
name = "mzdeisotope"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "A library to deisotope and charge state deconvolve mass spectra"
license = "Apache-2.0"
repository = "https://github.com/mobiusklein/mzdeisotope"
documentation = "https://docs.rs/mzdeisotope"
readme = "../README.md"
exclude = ["tests/"]

keywords = ['mass-spectrometry', 'deisotoping', 'charge-deconvolution']

categories = ["science", "data-processing"]

[[bin]]
name = "mz-averagine"
path = "src/averagine.rs"

[[example]]
name = "deisotoper"


[dependencies]

num-traits = "0.2"

mzdata = { version = "0.15.0", default-features = false, features = ["mzsignal", "nalgebra"] }
mzpeaks = { version = ">=0.11.0,<1.0.0" }
chemical_elements = { version = "0.3.0", features = ['mzpeaks'] }
tracing = { version = "0.1.40" }
itertools = "0.12.0"
thiserror = "1.0.56"
fnv = "1.0.7"

[dev-dependencies]
flate2 = "1.0.28"
test-log = "0.2.12 "
rayon = "1.7.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"]}
