[package]
name = "mzdeisotope"
version = { workspace = true }

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "A library to deisotope and charge state deconvolve mass spectra"
license = "Apache-2.0"
repository = "https://github.com/mobiusklein/mzdeisotope"
documentation = "https://docs.rs/mzdeisotope"
readme = "../README.md"
exclude = ["tests/"]

keywords = ['mass-spectrometry', 'deisotoping', 'charge-deconvolution']

categories = ["science", "science::bioinformatics::proteomics"]

[[bin]]
name = "mz-averagine"
path = "src/averagine.rs"

[[example]]
name = "deisotoper"

[features]

experimental-partition-key = []
charge-v2 = []
serde = ["dep:serde", "mzpeaks/serde"]

[dependencies]

num-traits = "0.2"

mzdata = { workspace = true }
mzpeaks = { workspace = true }
chemical_elements = { workspace = true }
serde = { workspace = true, optional = true }

tracing.workspace = true
itertools = "0.12.0"
thiserror.workspace = true
identity-hash = "0.1.0"

[dev-dependencies]
flate2 = "1.0.28"
test-log = { version = "0.2.12 ", features = ["trace"] }
rayon = "1.7.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"]}

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "mzdeiostope/doc/katex.html",
]