[package]
name = "mzdeisotoper"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Deisotoping and charge state deconvolution of mass spectrometry files"
license = "Apache-2.0"
repository = "https://github.com/mobiusklein/mzdeisotope"
documentation = "https://docs.rs/mzdeisotoper"
readme = "../README.md"
exclude = ["tests/", "tmp/", ]

keywords = ['mass-spectrometry', 'deisotoping', 'charge-deconvolution']

categories = ["science", "data-processing"]

[features]
default = ["zlib-ng-compat", ]

mzmlb = ["mzdata/mzmlb"]
thermo = ["mzdata/thermo"]

zlib = ["mzdata/zlib"]
zlib-ng-compat = ["mzdata/zlib-ng-compat"]
miniz_oxide = ["mzdata/miniz_oxide"]


[dependencies]
mzdeisotope = { path = "../mzdeisotope", version = "0.1.2" }
mzdata = { version = "0.13.0", features = ["mzsignal", "nalgebra"] }
mzpeaks = { version = "0.11.0" }

itertools = "0.12.0"
rayon = "1.7.0"
flate2 = "1.0.28"
clap = { version = "4.4.11", features = ["derive"] }
thiserror = "1.0.56"

tracing = { version = "0.1.40" }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "chrono"]}
tracing-appender = "0.2.3"
serde = { version = "1.0.197", features = ["derive"] }
figment = { version = "0.10.15", features = ["env", "toml"] }

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
