[package]
name = "mzdeisotoper"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Deisotoping and charge state deconvolution of mass spectrometry files"
license = "Apache-2.0"
repository = "https://github.com/mobiusklein/mzdeisotope"
documentation = "https://docs.rs/mzdeisotoper"
readme = "../README.md"
exclude = ["tests/", "tmp/", ]

keywords = ['mass-spectrometry', 'deisotoping', 'charge-deconvolution']

categories = ["science", "science::bioinformatics::proteomics"]

[features]
default = ["zlib-ng-compat", ]

mzmlb = ["mzdata/mzmlb"]
thermo = ["mzdata/thermo"]

zlib = ["mzdata/zlib"]
zlib-ng-compat = ["mzdata/zlib-ng-compat"]
miniz_oxide = ["mzdata/miniz_oxide"]


[dependencies]
mzdeisotope = { path = "../mzdeisotope", version = "0.2.6" }
mzdata = { workspace = true }
mzpeaks = { workspace = true }

itertools = "0.12.0"
rayon = "1.7.0"
flate2 = "1.0.28"
clap = { version = "4.5.9", features = ["derive"] }
crossbeam-channel = { version = "0.5.13" }

thiserror.workspace = true

tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

serde = { version = "1.0.197", features = ["derive"] }
figment = { version = "0.10.15", features = ["env", "toml"] }

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
