[package]
name = "mzdeisotoper"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Deisotoping and charge state deconvolution of mass spectrometry files"
license = "Apache-2.0"
repository = "https://github.com/mobiusklein/mzdeisotope"
documentation = "https://docs.rs/mzdeisotoper"
readme = "../README.md"
exclude = ["tests/", "tmp/", ]

keywords = ['mass-spectrometry', 'deisotoping', 'charge-deconvolution']

categories = ["science", "science::bioinformatics::proteomics"]

[features]
default = ["zlib-ng-compat", "mimalloc"]

mzmlb = ["mzdata/mzmlb"]
thermo = ["mzdata/thermo"]
bruker_tdf = ["mzdata/bruker_tdf"]

zlib = ["mzdata/zlib"]
zlib-ng-compat = ["mzdata/zlib-ng-compat"]
miniz_oxide = ["mzdata/miniz_oxide"]


[dependencies]
mzdeisotope = { path = "../mzdeisotope" }
mzdeisotope-map = { path = "../mzdeisotope-map" }
mzdata = { workspace = true }
mzpeaks = { workspace = true }

itertools = "0.12.0"
rayon = "1.10.0"
flate2 = "1.0.28"
clap = { workspace = true }
crossbeam-channel = { workspace = true }

thiserror.workspace = true

tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

serde = { version = "1.0.197", features = ["derive"] }
figment = { version = "0.10.15", features = ["env", "toml"] }
toml = "0.8.19"
mimalloc = { version = "0.1.43", optional = true }

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
test-log = { version = "0.2.16", features = ["trace", "unstable"] }