[package]
name = "high_baseline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

thermo = ["mzdata/thermo"]


[dependencies]
mzdata = { workspace = true, features = ["nalgebra", "parallelism", ] }
mzpeaks.workspace = true
mzsignal = "0.18.0"
mzdeisotope = { path = "../../mzdeisotope" }

tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.5.9", features = ["derive"] }
