[package]
name = "ims_map"
version = "0.1.0"
edition = "2021"


[dependencies]
mzdata = { workspace = true, features = ["nalgebra", "parallelism", ] }
mzpeaks.workspace = true
mzsignal = { workspace = true }

mzdeisotope = { path = "../../mzdeisotope" }
mzdeisotope-map = { path = "../../mzdeisotope-map" }

tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true